css/style.css
@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');

html,
body {
    width: 100%;
    height: 100%;
    margin: 0;
    background-image: url(../images/modern.png);
    background-size: 100% 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-family: 'Comfortaa', cursive;
}

#calculator {
    background-color: black;
    width: 30vw;
    height: 55vh;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    padding: 5px;
    border: 1px solid #239E80;
    gap: 2px;
}

.line {
    display: flex;
    flex: 1;
    gap: 1px;
}

#output {
    color: white;
    text-align: right;
    font-size: 40px;
    flex: 1;
    padding: 1px 6px;
    border-bottom: 2px dotted #ffed4a;
    margin: auto 2px 0px;
}

button {
    width: 100%;
    flex: 1;
    font-size: 36px;
    background-color: #ffed4a;
    color: #3d3d3d;
    font-family: inherit;
}

button:active {
    color: #4A5CFF;
}

#footer {
    position: fixed;
    bottom: 0;
    right: 0;
    left: 0;
    text-align: center;
}

a {
    color: black;
}

